--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
 	<groupId>de.f0rce.viz</groupId>
 	<artifactId>viz</artifactId>
-	<version>1.0.0</version>
+	<version>2.0.0</version>
 	<name>Viz</name>
-	<description>Polymer 3 wrap around Viz.js (https://github.com/mdaines/viz.js) for Vaadin 14+</description>
+	<description>Lit-Element wrap around Viz.js (https://github.com/mdaines/viz.js) for Vaadin 14+</description>
 
 	<properties>
-		<vaadin.version>14.4.7</vaadin.version>
+		<vaadin.version>14.5.1</vaadin.version>
 
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
